// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DebianBasic Docker container creation creates a Debian Basic Docker container with volume 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
        "volumes": [
          {
            "container_path": "/mnt/data",
            "volume_name": "\${docker_volume.Test_Test-volume_F1ABD0A9.name}",
          },
        ],
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "debian:latest",
      },
    },
    "docker_volume": {
      "Test_Test-volume_F1ABD0A9": {
        "name": "Test-data",
      },
    },
  },
}
`;

exports[`DebianBasic Docker container creation creates a Docker container for { version: 'debian11', expectedImage: 'debian:bullseye' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "debian:bullseye",
      },
    },
  },
}
`;

exports[`DebianBasic Docker container creation creates a Docker container for { version: 'debian12', expectedImage: 'debian:bookworm' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "provider": {
    "docker": [
      {},
    ],
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "debian:bookworm",
      },
    },
  },
  "terraform": {
    "required_providers": {
      "docker": {
        "source": "kreuzwerker/docker",
        "version": "3.0.2",
      },
    },
  },
}
`;

exports[`DebianBasic Docker container creation creates a Docker container for { version: 'latest', expectedImage: 'debian:latest' } 1`] = `
{
  "output": {
    "Test_Test-public-ip_348420EB": {
      "value": "\${docker_container.Test_Test-container_72A6054C.network_data[0].ip_address}",
    },
  },
  "resource": {
    "docker_container": {
      "Test_Test-container_72A6054C": {
        "command": [
          "sleep",
          "infinity",
        ],
        "image": "\${docker_image.Test_Test-image_5197E2DB.name}",
        "name": "Test-container",
      },
    },
    "docker_image": {
      "Test_Test-image_5197E2DB": {
        "keep_locally": false,
        "name": "debian:latest",
      },
    },
  },
}
`;
